# Wi-Fighters-RDC

./: README.md
TPN1/: INFORME.MD  TPN1_PK.pkt
TPN2/: INFORME.md
TPN3/: INFORME.md  TPN3_PK.pkt
TPN3/img/: Ruta_modificada.ppg  Ruta_original.npg
TPN4/: INFORME.md
TPN5/: CMakeLists.txt  INFORME.md  build.sh
TPN5/client/: CMakeLists.txt  client-tcp-e.cpp  client-tcp.cpp  client-udp-e.cpp  client-udp.cpp  client.cpp  enviar_hola.sh  enviar_hola_udp.sh
TPN5/server/: CMakeLists.txt  calculo_latencia_con_log.py  server-tcp  server-tcp-e.cpp  server-tcp.cpp  server-udp-e.cpp  server-udp.cpp  server.cpp
